update sh script invocation for curl